html/public/list.css
* {
  box-sizing: border-box;
}
.list:before {
  position: absolute;
  display: block;
  content: '';
  z-index: 5;
  top: -5px;
  left: 0;
  right: 0;
  height: 5px;
}
.list {
  position: relative;
  font-family: "Fira Sans";
  float: left;
  padding: 0px;
  width: 30%;
  overflow-y: scroll;
}
.list li {
  font-weight: normal;
  letter-spacing: 0px;
  text-transform: none;
  width: 100%;
  list-style-type: none;
  background-color: rgb(230,35,60);
}
.detail {
  line-height: 0.75;
  display: block;
  background-image: linear-gradient(rgb(230,35,60), rgb(220,30,53));
  background-repeat: repeat-y;
  background-size: 40px 40px;
}
.list li button {
  font-family: "Fira Sans", "Helvetica Neue", Arial, sans-serif;
  font-weight: bold;
  letter-spacing: -0.5px;
  text-transform: uppercase;
  color: whitesmoke;
  background-image: linear-gradient(rgb(230,35,60), rgb(220,30,53));
}
.check {
  width: 40px;
  height: 40px;
  border: none;
  color: #444;
  cursor: pointer;
  margin: 0px;
  transition-duration: 0.25s;
}
.check.shown {
  width: 40px;
  height: 40px;
  font-size: 25px;
  border-radius: 10px;
  border: 3px solid whitesmoke;
  padding: 0px;
  text-align: center;
  vertical-align: middle;
  font-weight: bold;
}
.check:hover {
  filter: brightness(85%);
}
.name {
  float: right;
  width: calc(100% - 40px);
  height: 40px;
  border: none;
  outline: none;
  text-align: left;
  font-size: 18px;
  color: #444;
  cursor: pointer;
  transition-duration: 0.25s;
}
.name:hover {
  filter: brightness(85%);
}
.name:after {
  float: right;
  font-weight: bold;
  font-size: 20px;
  content: "\002B";
}
.name.is-open:after {
  content: "\2212";
}
.content {
  padding: 0px;
  color: whitesmoke;
  overflow: hidden;
  max-height: 0;
  line-height: 1;
  padding-left: 10px;
  padding-right: 10px;
  white-space: pre-line;
  transition: max-height 0.25s;
  background-color: rgb(200,30,53);
}

